# file-cleaner

./: .~lock.S3902219_A1_Report.docx#  CMakeLists.txt  README.md  S3902219_A1_Report.docx  processes.cpp  threads_intro.cpp
task_1/: Makefile  Task1.cpp  Task1.h  Task1.sh  num_lines.sh  t1  task1  task1.cpp  task1.sh  word_filter.cpp  word_filter.h
task_2/: Makefile  Task2.cpp  Task2.h  t2  task2  task2.cpp
task_2/separated_lists/: length_10  length_10.txt  length_11  length_11.txt  length_12  length_12.txt  length_13  length_13.txt  length_14  length_14.txt  length_15  length_15.txt  length_3  length_3.txt  length_4  length_4.txt  length_5  length_5.txt  length_6  length_6.txt  length_7  length_7.txt  length_8  length_8.txt  length_9  length_9.txt
task_3/: Makefile  t3  task3  task3.cpp
task_4/: Makefile  task4  task4.cpp
task_5/: Makefile  task5  task5.cpp  task5.mk  task5server  task5server.cpp  task5server.mk
utilities/: function_timer.cpp  function_timer.h  utils.cpp  utils.h
